fix short button text alignment

--- a/packages/assets/scss/03-organisms/_page-banner.scss
+++ b/packages/assets/scss/03-organisms/_page-banner.scss
@@ -164,6 +164,7 @@ $text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     list-style: none;
     padding-left: 0;
     margin-top: 1rem;
+    width: 100%;
   }
 
   &__button {
